@@ -245,6 +245,9 @@ it from source control: http://www.mediawiki.org/wiki/Download_from_SVN
 * (bug 13750) First letter capitalization can now be a per-namespace setting
 * (bug 21073) "User does not exist" message no longer displayed on sub-sub-pages
   of existing users
+* (bug 21095) Tracking categories produced by the parser (expensive parser function
+  limit exceeded, __NOINDEX__ tracking, etc) can now be disabled by setting the 
+  system message ([[MediaWiki:expensive-parserfunction-category]] etc) to "-".
 
 === Bug fixes in 1.16 ===
 
